reference-llvm/tests/should-fail/fail9.mu
// no such target

function @entry foo() {
    [write 0, .made.up];
}
